Add integ tests
Signed-off-by: Ajay Raj Nelapudi <ajnelapu@amazon.com>